# R-Type-EPITECH

./: CMakeLists.txt  README.md
Engine/src/Components/: Collision.hpp  UserInterface.hpp
Engine/src/Core/: Asset.cpp  Asset.hpp  Component.hpp  Engine.cpp  Engine.hpp  Scene.cpp  Scene.hpp
Engine/src/Systems/: AudioSystem.cpp  CollisionSystem.cpp  EntityDataSystem.hpp  RenderingSystem.cpp  UserInterfaceSystem.cpp  UserInterfaceSystem.hpp
Games/R-Type/: main.cpp
Games/R-Type/include/: Game.cpp  Game.hpp
Network/includes/: sender.hpp  server.hpp
Network/server/: sender.cpp  server.cpp
Test/: main.cpp
